--- a/src/main/resources/templates/page_user/weather_search.html
+++ b/src/main/resources/templates/page_user/weather_search.html
@@ -524,7 +524,7 @@
                                                         <p class="nameCity"
                                                            th:text="*{cityName}"></p>
                                                     </a></b>
-                                                    <p th:text="*{#dates.format(date, 'dd-MM-yyyy')}"
+                                                    <p th:text="*{#calendars.format(date, 'dd-MM-yyyy')}"
                                                        style="color: black"></p>
                                                     <!--                                                        </div>-->
                                                 </td>
