--- a/src/main/resources/templates/page_user/weather_detail.html
+++ b/src/main/resources/templates/page_user/weather_detail.html
@@ -16,15 +16,17 @@
     <link href='css/weather.css' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href='/css/weather_detail.css'>
     <style>
-        .navbar{
+        .navbar {
             background-image: linear-gradient(#426b82, #2fa4e7 60%, #1d9ce5);
         }
+
         .table td, .table th {
             padding: 9px !important;
             vertical-align: top;
             border-top: 1px solid #dee2e6;
         }
-        p{
+
+        p {
             margin-bottom: 0px !important;
         }
     </style>
@@ -36,8 +38,9 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" th:href="@{/}"> <img src="https://cdn.pixabay.com/photo/2013/07/12/18/41/weather-153703_640.png" height="35px"/>
-        <span style="font-family: FreeMono, monospace">Ur-Weather</span>
+        <a class="navbar-brand" th:href="@{/}"> <img
+                src="https://cdn.pixabay.com/photo/2013/07/12/18/41/weather-153703_640.png" height="35px"/>
+            <span style="font-family: FreeMono, monospace">Ur-Weather</span>
         </a>
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
@@ -92,41 +95,35 @@
                     <div class="box col-md-12">
                         <div class="box-inner chung">
                             <div class="table-responsive">
-                            <table class="table table-striped" >
-                                <th:block th:each="detail : ${detail}">
-                                    <tr class="detailDB" th:object="${detail}">
-                                        <td class="icon_rps" style="width: 100px; height: 50px">
-                                            <img style="margin-left:10px;" th:src="*{icon}" class="icon">
-                                        </td>
-                                        <td class="city_rps" style="width: 200px; height: 50px">
-                                            <b><p class="nameCity" th:text="*{cityName}"></p></b>
-                                            <p th:text="*{#calendars.format(date, 'dd-MM-yyyy')}"
-                                               style="color: black"></p>
-                                        </td>
-                                        <td class="temp_rps">
-                                            <!--                                                        <div class="property">-->
-<!--                                            <div class="badge badge-info"-->
-<!--                                                 th:text="*{temp}+'°С'"></div>-->
-                                            <div class="badge badge-info" th:text="*{tempMin}+'&deg;C'"></div>
-                                            <div class="badge badge-warning" th:text="*{tempMax}+'&deg;C'"></div>
-                                            <b><i id="descript_rps" th:text="*{description}"
-                                                  style="color: black"></i></b>
-                                            <p style="color: black" class="general_rps hidden-xs"
-                                               th:text="*{wind}+'m/s &nbsp;  '+ *{humidity}+'% &nbsp; '+*{pressure}+'hpa. '">
-                                                <!--                                                        </div>-->
-                                        </td>
-                                    </tr>
-                                </th:block>
-                            </table>
+                                <table class="table table-striped">
+                                    <th:block th:each="detail : ${detail}">
+                                        <tr class="detailDB" th:object="${detail}">
+                                            <td class="icon_rps" style="width: 100px; height: 50px">
+                                                <img style="margin-left:10px;" th:src="*{icon}" class="icon">
+                                            </td>
+                                            <td class="city_rps" style="width: 200px; height: 50px">
+                                                <b><p class="nameCity" th:text="*{cityName}"></p></b>
+                                                <p th:text="*{#calendars.format(date, 'dd-MM-yyyy')}"
+                                                   style="color: black"></p>
+                                            </td>
+                                            <td class="temp_rps">
+                                                <div class="badge badge-info" th:text="*{tempMin}+'&deg;C'"></div>
+                                                <div class="badge badge-warning" th:text="*{tempMax}+'&deg;C'"></div>
+                                                <b><i id="descript_rps" th:text="*{description}"
+                                                      style="color: black"></i></b>
+                                                <p style="color: black" class="general_rps hidden-xs"
+                                                   th:text="*{wind}+'m/s &nbsp;  '+ *{humidity}+'% &nbsp; '+*{pressure}+'hpa. '">
+                                            </td>
+                                        </tr>
+                                    </th:block>
+                                </table>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
-
 </div>
 </body>
 </html>
