--- a/src/main/resources/templates/page_admin/table.html
+++ b/src/main/resources/templates/page_admin/table.html
@@ -5,8 +5,7 @@
     <meta charset="utf-8">
     <title>Page Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Charisma, a fully featured, responsive, HTML5, Bootstrap admin template.">
-    <meta name="author" content="Muhammad Usman">
+    <meta name="author" content="Mai Trinh">
 
     <!-- The styles -->
     <link id="bs-css" href="css/bootstrap-cerulean.min.css" rel="stylesheet">
@@ -29,18 +28,14 @@
     <!-- jQuery -->
     <script src="bower_components/jquery/jquery.min.js"></script>
 
-    <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
 
     <!-- The fav icon -->
     <link rel="shortcut icon" href="https://cdn.pixabay.com/photo/2013/07/12/18/41/weather-153703_640.png">
     <!--    Sweet Alert-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script th:src="@{/js/jquery.min.js}" type="text/javascript"></script>
     <script th:src="@{/js/sweetalert2.all.min.js}" type="text/javascript"></script>
-
 
     <style>
         .navbar {
@@ -190,12 +185,11 @@
                                         </div>
                                     </td>
                                     <td class="center">
-                                        <a class="btn btn-danger deleteAccount"
-                                           th:href="@{/admin/delete/__${user.id}__}"
-                                           onclick="return confirm('Do you want to delete this account?')"
+                                        <button class="btn btn-danger deleteAccount"
+
                                            title="Delete Account"><i class="glyphicon glyphicon-trash"></i>
                                             Delete
-                                        </a>
+                                        </button>
                                     </td>
                                 </tr>
 
@@ -216,42 +210,42 @@
     /**
      * Change Status User
      */
-    $(document).ready(function () {
-        $('.checkbox1').change(function () {
-            if ($(this).is(":checked")) {
-                var returnVal = confirm("Do you want to enable this account?");
-                if (returnVal) {
-                    var id = $(this).closest("tr").attr("data-id");
-                    $.ajax({
-                        url: "/admin/edit-status-user",
-                        type: "GET",
-                        data: {
-                            id: id,
-
-                        },
-                    })
-                } else {
-                    $(this).prop('checked', returnVal);
-                }
-            } else {
-                var returnVal = confirm("Do you want to disable this account?");
-                // $(this).attr("checked", returnVal);
-                if (returnVal) {
-                    var id = $(this).closest("tr").attr("data-id");
-                    $.ajax({
-                        url: "/admin/edit-status-user",
-                        type: "GET",
-                        data: {
-                            id: id,
-                        },
-                    })
-                } else {
-                    $(this).prop('checked', returnVal);
-                    location.reload();
-                }
-            }
-        });
-    })
+    // $(document).ready(function () {
+    //     $('.checkbox1').change(function () {
+    //         if ($(this).is(":checked")) {
+    //             var returnVal = confirm("Do you want to enable this account?");
+    //             if (returnVal) {
+    //                 var id = $(this).closest("tr").attr("data-id");
+    //                 $.ajax({
+    //                     url: "/admin/edit-status-user",
+    //                     type: "GET",
+    //                     data: {
+    //                         id: id,
+    //
+    //                     },
+    //                 })
+    //             } else {
+    //                 $(this).prop('checked', returnVal);
+    //             }
+    //         } else {
+    //             var returnVal = confirm("Do you want to disable this account?");
+    //             // $(this).attr("checked", returnVal);
+    //             if (returnVal) {
+    //                 var id = $(this).closest("tr").attr("data-id");
+    //                 $.ajax({
+    //                     url: "/admin/edit-status-user",
+    //                     type: "GET",
+    //                     data: {
+    //                         id: id,
+    //                     },
+    //                 })
+    //             } else {
+    //                 $(this).prop('checked', returnVal);
+    //                 location.reload();
+    //             }
+    //         }
+    //     });
+    // })
 
     /**
      * Change Role User
@@ -266,83 +260,75 @@
             console.log(id);
             $.ajax({
                 url: "/admin/change-role",
-                type: "GET",
+                type: "post",
                 data: {
                     id: id,
                     role: selectedRole
                 },
             })
-        });
+                  });
     });
 
 
 </script>
 
-<!--<script>-->
-<!--    $('.checkbox1').change(function () {-->
-<!--        // event tu uncheck -> check-->
-<!--        if ($(this).is(":checked")) {-->
+<script>
+    $('.checkbox1').change(function() {
+        // event tu uncheck -> check
+        if($(this).is(":checked")) {
 
-<!--            swal({-->
-<!--                title: 'Comfirm!',-->
-<!--                text: "Are you sure that you want to perform this action?",-->
-<!--                showCancelButton: true,-->
-<!--                confirmButtonColor: '#3085d6',-->
-<!--                cancelButtonColor: '#d33',-->
-<!--                confirmButtonText: 'Yes, change it',-->
-<!--                cancelButtonText: 'No, cancel'-->
+            swal({
+                title: 'Comfirm!',
+                text: "Are you sure that you want to perform this action?",
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#9E9E9E',
+                confirmButtonText: 'Yes, change it',
+                cancelButtonText: 'No, cancel'
 
-<!--            }).then((result) = > {-->
+            }).then((result) => {
 
-<!--                if(result.value-->
-<!--        )-->
-<!--            {-->
-<!--                var self = $(this);-->
-<!--                var id = $(this).closest("tr").attr("data-id");-->
+                if (result.value) {
+                var self = $(this);
+                var id   = $(this).closest("tr").attr("data-id");
 
-<!--                $.ajax({-->
-<!--                    url: "/admin/edit-status-user",-->
-<!--                    type: "get",-->
-<!--                    data: {id: id},-->
-<!--                })-->
-<!--            }-->
-<!--        else-->
-<!--            {-->
-<!--                $(this).prop('checked', false)-->
-<!--            }-->
-<!--        })-->
-<!--        } else {-->
+                $.ajax({
+                    url		:"/admin/edit-status-user",
+                    type	:"POST",
+                    data :{id : id},
+                })
+            }else{
+                $(this).prop('checked',false)
+            }
+        })
+        }else{
 
-<!--            swal({-->
-<!--                title: 'Comfirm!',-->
-<!--                text: "Are you sure that you want to perform this action?",-->
-<!--                showCancelButton: true,-->
-<!--                confirmButtonColor: '#3085d6',-->
-<!--                cancelButtonColor: '#d33',-->
-<!--                confirmButtonText: 'Yes, change it',-->
-<!--                cancelButtonText: 'No, cancel'-->
+            swal({
+                title: 'Comfirm!',
+                text: "Are you sure that you want to perform this action?",
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#9E9E9E',
+                confirmButtonText: 'Yes, change it',
+                cancelButtonText: 'No, cancel'
 
-<!--            }).then((result) = > {-->
+            }).then((result) => {
 
-<!--                if(result.value-->
-<!--        )-->
-<!--            {-->
-<!--                var self = $(this);-->
-<!--                var id = $(this).closest("tr").attr("data-id");-->
-<!--                $.ajax({-->
-<!--                    url: "/admin/edit-status-user",-->
-<!--                    type: "POST",-->
-<!--                    data: {id: id}-->
-<!--                })-->
-<!--            }-->
-<!--        else-->
-<!--            {-->
-<!--                $(this).prop('checked', true)-->
-<!--            }-->
-<!--        })-->
-<!--        }-->
-<!--    });-->
-<!--</script>-->
+                if (result.value) {
+                var self = $(this);
+                var id = $(this).closest("tr").attr("data-id");
+                $.ajax({
+                    url		: "/admin/edit-status-user",
+                    type	: "POST",
+                    data:{id:id}
+                })
+            }else{
+                $(this).prop('checked',true)
+            }
+        })
+        }
+    });
+</script>
 <!-- external javascript -->
 
 <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -360,7 +346,7 @@
 <!-- plugin for gallery image view -->
 <script src="bower_components/colorbox/jquery.colorbox-min.js"></script>
 <!-- notification plugin -->
-<script src="js/jquery.noty.js"></script>
+<!--<script src="js/jquery.noty.js"></script>-->
 <!-- library for making tables responsive -->
 <script src="bower_components/responsive-tables/responsive-tables.js"></script>
 <!-- tour plugin -->
@@ -377,45 +363,41 @@
 <script src="js/jquery.history.js"></script>
 <!-- application script for Charisma demo -->
 <script src="js/charisma.js"></script>
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </body>
 </html>
 
-<!--<script>-->
-<!--    $(".deleteAccount").click(function () {-->
-<!--        var id = $(this).closest("tr").attr("data-id");-->
-<!--        console.log(id);-->
-<!--        swal({-->
-<!--            title: 'Comfirm!',-->
-<!--            text: "Are you sure that you want to perform this action?",-->
-<!--            showCancelButton: true,-->
-<!--            confirmButtonColor: '#3085d6',-->
-<!--            cancelButtonColor: '#d33',-->
-<!--            confirmButtonText: 'Yes, delete it',-->
-<!--            cancelButtonText: 'No, cancel'-->
-<!--        }).then((result) = > {-->
-<!--            if(result.value-->
-<!--    )-->
-<!--        {-->
-<!--            var self = $(this);-->
-<!--            var id = $(this).closest("tr").attr("data-id");-->
-<!--            console.log(id);-->
-<!--            $.ajax({-->
-<!--                url: "/admin/delete",-->
-<!--                type: "post",-->
-<!--                data: {-->
-<!--                    id: id,-->
+<script>
+    $(".deleteAccount").click(function(){
+        swal({
 
-<!--                },-->
-<!--                success: function (value) {-->
-<!--                    self.closest("tr").remove();-->
-<!--                }-->
-<!--            })-->
+            title: 'Comfirm!',
+            text: "Are you sure that you want to perform this action?",
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#9E9E9E',
+            confirmButtonText: 'Yes, delete it',
+            cancelButtonText: 'No, cancel'
 
-<!--        }-->
-<!--    }-->
+        }).then((result) => {
 
-<!--    })-->
+            if (result.value) {
+            var self = $(this);
+            var id = $(this).closest("tr").attr("data-id");
 
-<!--</script>-->
+            $.ajax({
+                url	:"/admin/delete",
+                type	:"POST",
+                data	:{id:id},
+
+                success: function(value){
+                    self.closest("tr").remove();
+                },
+                error: function() {
+                    window.location.href = "/admin?message=error_system";
+                }
+            })
+        }
+    })
+    })
+</script>
