--- a/src/main/resources/templates/page_error/401.html
+++ b/src/main/resources/templates/page_error/401.html
@@ -1,162 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/xhtml">
+<th:block th:replace="layout/head :: head"></th:block>
+
 <head>
-
-    <meta charset="utf-8">
-    <title>Page Admin</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Charisma, a fully featured, responsive, HTML5, Bootstrap admin template.">
-    <meta name="author" content="Muhammad Usman">
-
     <!-- The styles -->
     <link id="bs-css" href="css/bootstrap-cerulean.min.css" rel="stylesheet">
-
-    <link href="css/charisma-app.css" rel="stylesheet">
-    <link href='bower_components/fullcalendar/dist/fullcalendar.css' rel='stylesheet'>
-    <link href='bower_components/fullcalendar/dist/fullcalendar.print.css' rel='stylesheet' media='print'>
-    <link href='bower_components/chosen/chosen.min.css' rel='stylesheet'>
-    <link href='bower_components/colorbox/example3/colorbox.css' rel='stylesheet'>
-    <link href='bower_components/responsive-tables/responsive-tables.css' rel='stylesheet'>
-    <link href='bower_components/bootstrap-tour/build/css/bootstrap-tour.min.css' rel='stylesheet'>
-    <link href='css/jquery.noty.css' rel='stylesheet'>
-    <link href='css/noty_theme_default.css' rel='stylesheet'>
-    <link href='css/elfinder.min.css' rel='stylesheet'>
-    <link href='css/elfinder.theme.css' rel='stylesheet'>
-    <link href='css/jquery.iphone.toggle.css' rel='stylesheet'>
-    <link href='css/uploadify.css' rel='stylesheet'>
-    <link href='css/animate.min.css' rel='stylesheet'>
-
-    <!-- jQuery -->
-    <script src="bower_components/jquery/jquery.min.js"></script>
-
-    <!-- The HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- The fav icon -->
-    <link rel="shortcut icon" href="img/icon1.png">
-    <!--    Sweet Alert-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert-dev.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
     <link href="/page_auth/css/mdb.min.css" rel="stylesheet">
     <link href="/page_auth/css/register.css" rel="stylesheet">
-    <link rel="shortcut icon" href="img/icon1.png">
-    <style>
-        .navbar .dropdown-menu a {
-            padding: 10px;
-            font-size: 15px !important;
-            font-weight: 300;
-            color: #000;
-        }
-        .navbar {
-            position: relative;
-            min-height: 50px;
-            margin-bottom: 0px !important;
-            border: 1px solid transparent;
-        }
-        * {
-            -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-        }
-
-        body {
-            padding: 0;
-            margin: 0;
-            background: white !important;
-        }
-
-        #notfound {
-            position: relative;
-            height: 65vh;
-        }
-
-        #notfound .notfound {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            -webkit-transform: translate(-50%, -50%);
-            -ms-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-        }
-
-        .notfound {
-            max-width: 410px;
-            width: 100%;
-            text-align: center;
-        }
-
-        .notfound .notfound-404 {
-            height: 280px;
-            position: relative;
-            z-index: -1;
-        }
-
-        .notfound .notfound-404 h1 {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 230px;
-            margin: 0px;
-            font-weight: 900;
-            position: absolute;
-            left: 50%;
-            -webkit-transform: translateX(-50%);
-            -ms-transform: translateX(-50%);
-            transform: translateX(-50%);
-            background: url('https://cdn.dribbble.com/users/2480087/screenshots/5684829/fltspc1_2x.png') no-repeat;
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-size: cover;
-            background-position: center;
-        }
-
-
-        .notfound h2 {
-            font-family: 'Montserrat', sans-serif;
-            color: #000;
-            font-size: 24px;
-            font-weight: 700;
-            text-transform: uppercase;
-            margin-top: 0;
-        }
-
-        .notfound p {
-            font-family: 'Montserrat', sans-serif;
-            color: #000;
-            font-size: 14px;
-            font-weight: 400;
-            margin-bottom: 20px;
-            margin-top: 0px;
-        }
-
-        .notfound a {
-            font-family: 'Montserrat', sans-serif;
-            font-size: 14px;
-            text-decoration: none;
-            text-transform: uppercase;
-            background: #0046d5;
-            display: inline-block;
-            padding: 15px 30px;
-            border-radius: 40px;
-            color: #fff;
-            font-weight: 700;
-            -webkit-box-shadow: 0px 4px 15px -5px #0046d5;
-            box-shadow: 0px 4px 15px -5px #0046d5;
-        }
-
-
-        @media only screen and (max-width: 767px) {
-            .notfound .notfound-404 {
-                height: 142px;
-            }
-            .notfound .notfound-404 h1 {
-                font-size: 112px;
-            }
-        }
-
-
-    </style>
+    <link href="css/error.css" rel="stylesheet">
 </head>
 
 <body>
@@ -213,43 +64,6 @@
     </div>
 </div>
 
-
-
-<!-- external javascript -->
-
-<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
-<!-- library for cookie management -->
-<script src="js/jquery.cookie.js"></script>
-<!-- calender plugin -->
-<script src='bower_components/moment/min/moment.min.js'></script>
-<script src='bower_components/fullcalendar/dist/fullcalendar.min.js'></script>
-<!-- data table plugin -->
-<script src='js/jquery.dataTables.min.js'></script>
-
-<!-- select or dropdown enhancer -->
-<script src="bower_components/chosen/chosen.jquery.min.js"></script>
-<!-- plugin for gallery image view -->
-<script src="bower_components/colorbox/jquery.colorbox-min.js"></script>
-<!-- notification plugin -->
-<script src="js/jquery.noty.js"></script>
-<!-- library for making tables responsive -->
-<script src="bower_components/responsive-tables/responsive-tables.js"></script>
-<!-- tour plugin -->
-<script src="bower_components/bootstrap-tour/build/js/bootstrap-tour.min.js"></script>
-<!-- star rating plugin -->
-<script src="js/jquery.raty.min.js"></script>
-<!-- for iOS style toggle switch -->
-<script src="js/jquery.iphone.toggle.js"></script>
-<!-- autogrowing textarea plugin -->
-<script src="js/jquery.autogrow-textarea.js"></script>
-<!-- multiple file upload plugin -->
-<script src="js/jquery.uploadify-3.1.min.js"></script>
-<!-- history.js for cross-browser state change on ajax -->
-<script src="js/jquery.history.js"></script>
-<!-- application script for Charisma demo -->
-<script src="js/charisma.js"></script>
-
-
+<th:block th:replace="layout/footer :: footer"></th:block>
 </body>
 </html>
