--- a/src/main/resources/templates/page_error/403.html
+++ b/src/main/resources/templates/page_error/403.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
     <meta charset="UTF-8">
     <title>404</title>
@@ -102,19 +103,12 @@
         }
 
     </style>
-</head>
-<body>
 
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>404 HTML Tempalte by Colorlib</title>
+    <title>404</title>
 
     <!-- Google font -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900" rel="stylesheet">
