sweetalert_pageUser, change formatDate

--- a/src/main/resources/templates/layout/footer.html
+++ b/src/main/resources/templates/layout/footer.html
@@ -23,7 +23,7 @@
     <!-- select or dropdown enhancer -->
     <script src="bower_components/chosen/chosen.jquery.min.js"></script>
     <!-- plugin for gallery image view -->
-    <script src="/bower_components/colorbox/jquery.colorbox-min.js"></script>
+    <script src="bower_components/colorbox/jquery.colorbox-min.js"></script>
     <!-- notification plugin -->
     <script src="js/jquery.noty.js"></script>
     <!-- library for making tables responsive -->
@@ -42,4 +42,13 @@
     <script src="js/jquery.history.js"></script>
     <!-- application script for Charisma demo -->
     <script src="js/charisma.js"></script>
+
+    <!--    Page Auth-->
+    <script type="text/javascript" src="/page_auth/js/popper.min.js"></script>
+    <!-- Bootstrap core JavaScript -->
+    <script type="text/javascript" src="/page_auth/js/bootstrap.min.js"></script>
+    <!-- MDB core JavaScript -->
+    <script type="text/javascript" src="/page_auth/js/mdb.min.js"></script>
+    <!--Login Javascript-->
+    <script type="text/javascript" src="/page_auth/js/login.js"></script>
 </th:block>
