--- a/src/main/resources/templates/page_auth/login.html
+++ b/src/main/resources/templates/page_auth/login.html
@@ -14,7 +14,6 @@
     <!-- Material Design Bootstrap -->
     <link href="/page_auth/css/mdb.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="https://cdn.pixabay.com/photo/2013/07/12/18/41/weather-153703_640.png">
-
 </head>
 
 <body>
@@ -29,14 +28,11 @@
             <div class="row">
                 <!--Grid column-->
                 <div class="col-md-6 mb-5 mt-md-0 mt-5 white-text-1 text-center text-md-left">
-                    <!--                        <br>-->
                     <h1 class="h1-responsive font-weight-bold wow fadeInLeft" data-wow-delay="0.3s"><img
                             src="page_auth/img/logo10.png" width="50px" ; height="50px">
                         Welcome to Ur-Weather </h1>
-                    <!--                        <hr class="hr-light wow fadeInLeft" data-wow-delay="0.3s">-->
                     <h6 class="mb-3 wow fadeInLeft" data-wow-delay="0.3s">Access all of your personal weather
-                        station
-                        data, all in one place.</h6>
+                        station data, all in one place.</h6>
                 </div>
                 <!--Grid column-->
                 <div class="col-md-6 col-xl-5 mb-4">
